--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -24,7 +24,7 @@
 					<li><a href="{{pathFor 'people'}}">People</a></li>
 				</ul>
 			    <ul class="nav navbar-nav navbar-right">
-			            {{> loginButtons}} <!-- here -->
+			         <!-- here -->
 			    </ul>				
 		    </div><!-- /.navbar-collapse -->
 			
