--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -19,9 +19,8 @@
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav">
-					<li><a href="{{pathFor 'schedule'}}">Schedule</a></li>
-					<li><a href="{{pathFor 'map'}}">Map</a></li>
 					<li><a href="{{pathFor 'people'}}">People</a></li>
+					<li><a href="{{pathFor 'submit'}}">Submit</a></li>
 				</ul>
 			    <ul class="nav navbar-nav navbar-right">
 			            {{> loginButtons}} <!-- here -->
