--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -22,6 +22,7 @@
 					<li><a href="{{pathFor 'schedule'}}">Schedule</a></li>
 					<li><a href="{{pathFor 'map'}}">Map</a></li>
 					<li><a href="{{pathFor 'people'}}">People</a></li>
+					<li><a href="{{pathFor 'profile'}}">Profile</a></li>
 				</ul>
 			    <ul class="nav navbar-nav navbar-right">
 			            {{> loginButtons}} <!-- here -->
