Added an age feature to edit profile

--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -21,7 +21,7 @@
 		      	<ul class="nav navbar-nav">
 					<li><a href="{{pathFor 'people'}}">People</a></li>
 
-					<li><a href="{{pathFor 'myprofile'}}">myProfile</a></li>
+					<li><a href="{{pathFor 'myprofile'}}">My Profile</a></li>
 
 					<li><a href="{{pathFor 'submit'}}">Submit</a></li>
 				</ul>
