--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -24,6 +24,8 @@
 					<li><a href="{{pathFor 'myprofile'}}">My Profile</a></li>
 
 					<li><a href="{{pathFor 'submit'}}">Submit</a></li>
+
+					<li><a href="{{pathFor 'puzzle'}}">Puzzle</a></li>
 				</ul>
 			    <ul class="nav navbar-nav navbar-right">
 			            {{> loginButtons}} <!-- here -->
