upping some text size

--- a/client/submit.css
+++ b/client/submit.css
@@ -1,11 +1,14 @@
 .puzzle1{
 	width:100%;
+	font-size:200%; 
 }
 .puzzle2{
 	width:100%;
 	height:auto;
+	font-size:125%; 
 
 }
 .puzzle3{
 	width:100%;
+	font-size:200%; 
 }
