Layout for search bar (not yet operating)

--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -32,7 +32,10 @@
 			
 		  </div><!-- /.container-fluid -->
 		</nav>
-		
+
+		<div id="searchBar">
+			{{> search}}
+		</div>
 		<!-- Here is where the actual content of the page gets inserted by the router! -->
 		{{> yield}}
 		
