--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -13,7 +13,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="{{pathFor 'welcome'}}">Home</a>
+		      <a class="navbar-brand" href="{{pathFor 'homepage'}}">Home</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -22,7 +22,12 @@
 					<li><a href="{{pathFor 'people'}}">People</a></li>
 					<li><a href="{{pathFor 'submit'}}">Submit</a></li>
 					<li><a href="{{pathFor 'puzzle'}}">Puzzles</a></li>
+				{{#if currentUser}}
 					<li><a href="{{pathFor 'myprofile'}}">MyProfile</a></li>
+				{{/if}}
+				<li><a href="{{pathFor 'welcome'}}">About</a></li>
+				
+
 					
 				</ul>
 			    <ul class="nav navbar-nav navbar-right">
