--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -20,7 +20,13 @@
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav">
 					<li><a href="{{pathFor 'people'}}">People</a></li>
+					
+					{{#if currentUser}}
 					<li><a href="{{pathFor 'submit'}}">Submit</a></li>
+					{{else}}
+					<li><a href="{{pathFor 'notUser'}}">Submit</a></li>
+					{{/if}}
+					
 					<li><a href="{{pathFor 'puzzle'}}">Puzzles</a></li>
 				{{#if currentUser}}
 					<li><a href="{{pathFor 'myprofile'}}">MyProfile</a></li>
