--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,5 +1,6 @@
 <template name="layout">
 	<div class="container">
+		<a href="{{pathFor 'searched'}}">Searched</a>
 		
 		<!-- Here is the standard Bootstrap code for a Navigation bar taken directly from getbootstrap.com/components -->
 		<nav class="navbar navbar-default">
