--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,9 +1,9 @@
 <template name="layout">
 	<div class="container">
-		<a href="{{pathFor 'searched'}}">Searched</a>
+		
 		
 		<!-- Here is the standard Bootstrap code for a Navigation bar taken directly from getbootstrap.com/components -->
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-info">
 		  <div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
