--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -29,6 +29,7 @@
 					{{/if}}
 					
 					<li><a href="{{pathFor 'puzzle'}}">Puzzles</a></li>
+					<li><a href="{{pathFor 'feedback'}}">Feedback</a></li>
 				{{#if currentUser}}
 					<li><a href="{{pathFor 'myprofile'}}">MyProfile</a></li>
 				{{/if}}
