--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -3,7 +3,7 @@
 		
 		
 		<!-- Here is the standard Bootstrap code for a Navigation bar taken directly from getbootstrap.com/components -->
-		<nav class="navbar navbar-info">
+		<nav class="navbar navbar-info navbar-fixed-bottom">
 		  <div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
@@ -45,7 +45,7 @@
 		  </div><!-- /.container-fluid -->
 		</nav>
 
-		<div id="searchBar">
+		<div id="searchBar searchBar-info">
 			{{> search}}
 		</div>
 		<!-- Here is where the actual content of the page gets inserted by the router! -->
